Remove implicit const char*->QString cast from QDBusServer's constructor

Commit 5be6cf0a6e306ed3a51ed5ba89317b1317544eea introduced an implicit
cast from const char* to QString in QDBusServer's constructor, which
breaks the compilation of applications which use QtDBus when
QT_NO_CAST_FROM_ASCII is defined and clang is used.

Task-number: QTBUG-23398
Change-Id: Iaba66ab05ae6232f69a3981c2ca168f1ffd7bb05
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>